<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="50sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefone"
        android:layout_marginStart="32dp"
        android:text="@string/code_brazil"
        app:layout_constraintTop_toTopOf="@id/btnEnviarSms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEnviarSms"/>

    <Button
        android:id="@+id/btnEnviarSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enviar_sms" />

    <EditText
        android:id="@+id/verificarCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_verificar_sms"
        android:layout_marginStart="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btnVerificarSms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnVerificarSms"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnVerificarSms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnEnviarSms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnEnviarSms"
        android:text="@string/verificar_sms"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/loginComGogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="Entrar com o Google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>